--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -5,7 +5,9 @@
 @addTagHelper *,AuthoringTagHelpers
 
 <div>
+    <a style="color:white" class="btn btn-primary" asp-controller="Login" asp-action="Index">Login</a>
     <a style="color:white" class="btn btn-primary" asp-controller="Person" asp-action="Index">Person</a>
+    <a style="color:white" class="btn btn-primary" asp-controller="PersonDetail" asp-action="Index">Person Detail</a>
     <a style="color:white" class="btn btn-primary" asp-controller="Department" asp-action="Index">Department</a>
     <a style="color:white" class="btn btn-primary" asp-controller="Salary" asp-action="Index">Salary</a>
 </div>
