--- a/WebApp/Views/Person/Add.cshtml
+++ b/WebApp/Views/Person/Add.cshtml
@@ -31,6 +31,11 @@
     <div class="form-row">
         <div class="col-md-4 mb-3">
 
+            <label> Email</label>
+            <input asp-for="Email" class="form-control" />
+        </div>
+        <div class="col-md-4 mb-3">
+
             <label> Address</label>
             <input asp-for="Address" class="form-control" />
         </div>
@@ -44,7 +49,7 @@
         </div>
         <div class="col-md-4 mb-3">
 
-            <label> Salary</label>
+            <label> Salary Id</label>
             <input asp-for="SalaryId" class="form-control" />
         </div>
 
