--- a/WebApp/Views/Person/Update.cshtml
+++ b/WebApp/Views/Person/Update.cshtml
@@ -11,7 +11,7 @@
 
 <form method="post" asp-action="Update">
     <div class="form-row">
-        <input asp-for="Id" hidden />
+        <input asp-for="PersonId" hidden />
         <div class="col-md-4 mb-3">
 
             <label> Person Name</label>
@@ -51,7 +51,7 @@
         </div>
         <div class="col-md-4 mb-3">
 
-            <label> Salary</label>
+            <label> Salary Id</label>
             <input asp-for="SalaryId" class="form-control" />
         </div>
 
