--- a/WebApp/Views/PersonDetail/Index.cshtml
+++ b/WebApp/Views/PersonDetail/Index.cshtml
@@ -1,11 +1,11 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "Index";
 }
+
 @addTagHelper *,Microfost.AspNetCore.Mvc.TagHelpers
 @addTagHelper *,AuthoringTagHelpers
-@model List<Department>
-<h1>Department List</h1>
+@model List<PersonDetailInformation>
+<h1>Person Detail List</h1>
 
 <div>
     <a asp-action="Add" class="btn btn-primary">Add</a>
@@ -13,18 +13,22 @@
         <thead>
             <tr>
                 <th>Name</th>
-                <th>Operations</th>
+                <th>Birth Day</th>
+                <th>City</th>
             </tr>
         </thead>
         <tbody>
             @foreach (var item in Model)
             {
                 <tr>
-                    <td>@item.DepartmentName</td>
+                    <td>@item.PersonName</td>
+                    <td>@item.BirthDay</td>
+                    <td>@item.PersonCity</td>
 
                     <td>
-                        <a style="color:white" class="btn btn-success" asp-action="Update" asp-route-id="@item.DepartmentId">Update</a>
-                        <form asp-action="Delete" asp-route-id="@item.DepartmentId" method="post" class="d-inline">
+                        <a style="color:white" class="btn btn-success" asp-action="Update" asp-route-id="@item.Id">Update</a>
+
+                        <form asp-action="Delete" asp-route-id="@item.Id" method="post" class="d-inline">
                             <button type="submit" class="btn btn-danger" style="color:white">Delete</button>
                         </form>
                     </td>
@@ -33,5 +37,3 @@
         </tbody>
     </table>
 </div>
-
-
